--- a/woocommerce/css/w-front-end.scss
+++ b/woocommerce/css/w-front-end.scss
@@ -20,7 +20,10 @@
         font-size: 14px;
         display: block;
         padding: 8px 12px;
-        color: inherit !important;
+        color: var(--jelly-color-description);
+        &:hover {
+            color: var(--jelly-color-primary);
+        }
     }
     &:hover .children::-webkit-scrollbar-thumb {
         background-color: var(--jelly-color-primary);
@@ -244,7 +247,7 @@
 
 .category-content {
     margin-top: 32px;
-    padding: 32px 0;
+    padding: 32px var(--jelly-side-width, 16px);
     background-color: var(--jelly-color-item-bg);
 }
 
