--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -461,6 +461,7 @@ nav.breadcrumb {
     align-items: center;
     position: relative;
     text-align: center;
+    margin: 0 calc(-1 * var(--jelly-side-width));
     h1 {
         margin: 0;
         color: #fff;
