--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,7 +1,6 @@
 .container {
-    width: var(--jelly-max-width, 1240px);
+    max-width: min(100%, var(--jelly-max-width, 1240px));
     margin: 0 auto;
-    padding: 0 var(--jelly-side-width, 16px);
     box-sizing: border-box;
     position: relative;
     &.flex {
@@ -73,7 +72,8 @@
 
 .site-header {
     position: relative;
-    padding: 8px 0;
+    padding: 8px var(--jelly-side-width, 16px);
+    width: 100%;
     box-sizing: border-box;
     .container {
         min-height: 60px;
@@ -218,7 +218,7 @@
     // margin-top: 36px;
     background-color: #0a0d14;
     color: #cccccc;
-    pad
+    padding: 0 var(--jelly-side-width, 16px);
     .site-name {
         font-weight: 600;
         font-size: 2.5em;
@@ -245,7 +245,7 @@
         display: flex;
         // padding: 48px 0;
         justify-content: space-between;
-        gap: 24px;
+        gap: 48px;
 
         .footer-item {
             width: 100%;
@@ -297,6 +297,10 @@
         }
     }
 }
+#main{
+    padding: 0 var(--jelly-side-width, 16px);
+}
+
 /* 404 页面 */
 .error-page {
     width: 400px;
@@ -829,6 +833,7 @@ nav.breadcrumb {
     align-items: center;
     position: relative;
     text-align: center;
+    margin: 0 calc(-1 * var(--jelly-side-width));
     h1 {
         margin: 0;
         color: #fff;
