--- a/assets/dev/page.css
+++ b/assets/dev/page.css
@@ -45,6 +45,11 @@
   margin: 24px 0;
 }
 
+.archive-page > .container {
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
 /* 移动端 */
 @media screen and (max-width: 767px) {
   .error-page {
