--- a/elementor/css/e-front-end.scss
+++ b/elementor/css/e-front-end.scss
@@ -174,6 +174,15 @@ div.elementor-menu-toggle {
     padding: 0;
 }
 
+.elementor-page{
+    #main{
+        padding: 0;
+    }
+    .page-banner{
+        margin: 0;
+    }
+}
+
 @media screen and (max-width: 1240px) {
     .elementor-nav-menu--main .elementor-nav-menu ul {
         box-shadow: none;
