--- a/assets/dev/layout.css
+++ b/assets/dev/layout.css
@@ -24,6 +24,9 @@
   min-width: 0;
   box-sizing: border-box;
 }
+.container .content h1 {
+  margin-top: 0;
+}
 .container .sidebar {
   width: 240px;
   flex: 0 0 auto; /* 不扩展，宽度由内容或设定的宽度决定 */
@@ -71,6 +74,7 @@
   padding: 8px var(--jelly-side-width, 16px);
   width: 100%;
   box-sizing: border-box;
+  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
 }
 .site-header .container {
   min-height: 60px;
@@ -88,6 +92,9 @@
 @media screen and (max-width: 1240px) {
   .container {
     width: 100%;
+  }
+  .container.flex {
+    margin: 16px auto;
   }
   .loop-gird {
     grid-template-columns: repeat(2, 1fr);
