--- a/assets/dev/layout.scss
+++ b/assets/dev/layout.scss
@@ -27,6 +27,9 @@
         //     margin-top: 0;
         //     margin-bottom: 24px;
         // }
+        h1{
+            margin-top: 0;
+        }
     }
     .sidebar {
         width: 240px;
@@ -75,6 +78,7 @@
     padding: 8px var(--jelly-side-width, 16px);
     width: 100%;
     box-sizing: border-box;
+    box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
     .container {
         min-height: 60px;
         display: flex;
@@ -92,6 +96,9 @@
 @media screen and (max-width: 1240px) {
     .container {
         width: 100%;
+        &.flex{
+            margin: 16px auto;
+        }
     }
     .loop-gird {
         grid-template-columns: repeat(2, 1fr);
