--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -21,7 +21,7 @@ a.button .ri-icon {
         line-height: 1;
     }
     .custom-logo {
-        height: 60px;
+        height: 50px;
         width: 100%;
         object-fit: contain;
     }
@@ -53,7 +53,7 @@ a.button .ri-icon {
         &.current-menu-item > a {
             color: var(--jelly-color-primary);
             &:hover {
-                color: var(--jelly-color-white);
+                color: var(--jelly-color-primary);
             }
         }
 
@@ -82,9 +82,10 @@ a.button .ri-icon {
         color: var(--jelly-color-title);
         background-color: #fff;
         box-sizing: border-box;
+        font-size: 14px;
         &:hover {
-            background-color: var(--jelly-color-primary);
-            color: var(--jelly-color-white);
+            color: var(--jelly-color-primary);
+            // color: var(--jelly-color-white);
         }
         &.button {
             background-color: var(--jelly-color-primary);
@@ -99,13 +100,13 @@ a.button .ri-icon {
         left: 0;
         background-color: #fff;
         white-space: nowrap;
-        box-shadow:
-            0 1px 2px -2px rgba(0, 0, 0, 0.16),
-            0 3px 6px 0 rgba(0, 0, 0, 0.12),
-            0 5px 12px 4px rgba(0, 0, 0, 0.09);
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
         a {
             font-weight: 400;
+            &:hover {
+                background-color: var(--jelly-color-item-bg);
+            }
         }
 
         .sub-menu {
@@ -124,36 +125,35 @@ a.button .ri-icon {
         display: none;
     }
 
-
     .menu-actions {
         display: flex;
         gap: 12px;
         align-items: center;
-        .search-input{
+        .search-input {
             width: 0;
             padding: 0;
             border-width: 0;
             transition: width 0.3s ease-in-out;
             float: right;
-            &.active{
+            &.active {
                 width: 100%;
                 padding: 8px 16px;
                 border-width: 1px;
-                + button{
+                + button {
                     border-width: 1px;
                 }
             }
         }
-        button{
+        button {
             border-width: 0;
             transition: none;
         }
-        button:focus{
+        button:focus {
             color: inherit;
             background: #fff;
             border-color: var(--jelly-color-border);
         }
-        .search-form{
+        .search-form {
             min-width: 40px;
         }
     }
@@ -180,7 +180,7 @@ form.search-form {
         height: 40px;
         // margin: 1px 1px 1px 0;
         border-left: 0;
-        border-radius:0 var(--jelly-border-radius-sm) var(--jelly-border-radius-sm) 0;
+        border-radius: 0 var(--jelly-border-radius-sm) var(--jelly-border-radius-sm) 0;
         &:hover {
             border-color: var(--jelly-color-border);
             background-color: #fff;
@@ -199,7 +199,7 @@ form.search-form {
         height: 40px;
         padding: 8px 16px;
         border-right: 0;
-        &:focus + button{
+        &:focus + button {
             border-color: var(--jelly-color-primary);
         }
     }
@@ -441,7 +441,7 @@ nav.breadcrumb {
 /**************************************************/
 .related-posts {
     width: 100%;
-    background-color: var(--jelly-color-item-bg);
+    // background-color: var(--jelly-color-item-bg);
     text-align: center;
     margin: 32px 0 0 0;
     padding: 32px 0;
