--- a/assets/dev/page.scss
+++ b/assets/dev/page.scss
@@ -11,11 +11,18 @@
     text-align: center;
     box-sizing: border-box;
     padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
     .error-title {
         font-size: 10rem;
+        margin: 0;
+        line-height: 1;
     }
     .error-description {
-        margin-bottom: 1rem;
+        margin: 0;        
     }
 }
 
