--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -24,6 +24,9 @@
   min-width: 0;
   box-sizing: border-box;
 }
+.container .content h1 {
+  margin-top: 0;
+}
 .container .sidebar {
   width: 240px;
   flex: 0 0 auto; /* 不扩展，宽度由内容或设定的宽度决定 */
@@ -71,6 +74,7 @@
   padding: 8px var(--jelly-side-width, 16px);
   width: 100%;
   box-sizing: border-box;
+  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
 }
 .site-header .container {
   min-height: 60px;
@@ -88,6 +92,9 @@
 @media screen and (max-width: 1240px) {
   .container {
     width: 100%;
+  }
+  .container.flex {
+    margin: 16px auto;
   }
   .loop-gird {
     grid-template-columns: repeat(2, 1fr);
@@ -206,8 +213,8 @@
 
 .site-footer {
   background-color: #0a0d14;
-  color: #cccccc;
-  padding: 0 var(--jelly-side-width, 16px);
+  color: #a3a3a3;
+  padding: 32px var(--jelly-side-width, 16px) 0;
 }
 .site-footer .site-name {
   font-weight: 600;
@@ -220,16 +227,17 @@
 .site-footer .footer-logo {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  padding: 64px 0 24px 0;
-  border-bottom: 1px solid #2d323f;
 }
 .site-footer .footer-logo a {
   display: block;
 }
 .site-footer .footer-logo img {
-  height: 64px;
+  height: 48px;
   width: 100%;
+}
+.site-footer .footer-logo-text {
+  margin-top: 30px;
+  color: #fff;
 }
 .site-footer .footer-content {
   display: flex;
@@ -241,9 +249,10 @@
   margin: 24px 0;
 }
 .site-footer .footer-content .footer-item-title {
-  font-size: 22px;
+  font-size: 18px;
   color: #fff;
   font-weight: 600;
+  text-transform: uppercase;
 }
 .site-footer .footer-content ul {
   padding: 0;
@@ -253,6 +262,7 @@
 .site-footer .footer-content ul .current-menu-item a {
   color: var(--jelly-color-primary);
   font-weight: 600;
+  font-size: 14px;
 }
 .site-footer .footer-content ul a {
   color: inherit;
@@ -260,15 +270,11 @@
 .site-footer .footer-content ul a:hover {
   color: var(--jelly-color-primary);
 }
-.site-footer .copyright {
-  background-color: #141414;
-  border-radius: 6px;
-}
 .site-footer .copyright .copyright-text {
   color: #fff;
   font-size: 14px;
   margin: 0;
-  padding: 16px;
+  padding: 16px 0;
 }
 
 @media screen and (max-width: 767px) {
@@ -282,6 +288,7 @@
 }
 #main {
   padding: 0 var(--jelly-side-width, 16px);
+  min-height: 480px;
 }
 
 /* 404 页面 */
@@ -292,12 +299,19 @@
   text-align: center;
   box-sizing: border-box;
   padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 .error-page .error-title {
   font-size: 10rem;
+  margin: 0;
+  line-height: 1;
 }
 .error-page .error-description {
-  margin-bottom: 1rem;
+  margin: 0;
 }
 
 /* 文章页面 */
@@ -324,6 +338,11 @@
 .post-page .post ul,
 .post-page .post ol {
   margin: 24px 0;
+}
+
+.archive-page > .container {
+  margin-top: 64px;
+  margin-bottom: 64px;
 }
 
 /* 移动端 */
@@ -363,7 +382,7 @@ a.button .ri-icon {
   line-height: 1;
 }
 .site-logo .custom-logo {
-  height: 60px;
+  height: 50px;
   width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
@@ -378,7 +397,6 @@ a.button .ri-icon {
   align-items: center;
   justify-content: flex-end;
   gap: 24px;
-  /* 搜索按钮 */
 }
 .primary-menu ul {
   margin: 0;
@@ -398,7 +416,7 @@ a.button .ri-icon {
   color: var(--jelly-color-primary);
 }
 .primary-menu li.current-menu-item > a:hover {
-  color: var(--jelly-color-white);
+  color: var(--jelly-color-primary);
 }
 .primary-menu li.menu-item-has-children > a::after {
   content: "\ea78";
@@ -420,10 +438,10 @@ a.button .ri-icon {
   color: var(--jelly-color-title);
   background-color: #fff;
   box-sizing: border-box;
+  font-size: 14px;
 }
 .primary-menu a:hover {
-  background-color: var(--jelly-color-primary);
-  color: var(--jelly-color-white);
+  color: var(--jelly-color-primary);
 }
 .primary-menu a.button {
   background-color: var(--jelly-color-primary);
@@ -436,10 +454,13 @@ a.button .ri-icon {
   left: 0;
   background-color: #fff;
   white-space: nowrap;
-  box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.12), 0 5px 12px 4px rgba(0, 0, 0, 0.09);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .primary-menu .sub-menu a {
   font-weight: 400;
+}
+.primary-menu .sub-menu a:hover {
+  background-color: var(--jelly-color-item-bg);
 }
 .primary-menu .sub-menu .sub-menu {
   top: 0;
@@ -453,16 +474,37 @@ a.button .ri-icon {
   padding: 6px;
   display: none;
 }
-.primary-menu .open-search {
-  background: none;
-  border: 0;
-  color: var(--jelly-color-title);
-  padding: 6px;
-}
 .primary-menu .menu-actions {
   display: flex;
   gap: 12px;
   align-items: center;
+}
+.primary-menu .menu-actions .search-input {
+  width: 0;
+  padding: 0;
+  border-width: 0;
+  transition: width 0.3s ease-in-out;
+  float: right;
+}
+.primary-menu .menu-actions .search-input.active {
+  width: 100%;
+  padding: 8px 16px;
+  border-width: 1px;
+}
+.primary-menu .menu-actions .search-input.active + button {
+  border-width: 1px;
+}
+.primary-menu .menu-actions button {
+  border-width: 0;
+  transition: none;
+}
+.primary-menu .menu-actions button:focus {
+  color: inherit;
+  background: #fff;
+  border-color: var(--jelly-color-border);
+}
+.primary-menu .menu-actions .search-form {
+  min-width: 40px;
 }
 
 /* 菜单切换按钮 widgets/primary-menu.php */
@@ -475,31 +517,36 @@ a.button .ri-icon {
 /**************************************************/
 form.search-form {
   position: relative;
+  display: flex;
+  flex-direction: row;
 }
 form.search-form button {
   line-height: 1;
-  background-color: transparent;
-  border: 0;
+  background-color: #fff;
+  border: 1px solid var(--jelly-color-border);
   color: var(--jelly-color-description);
   padding: 10px 14px 10px 14px;
   height: 40px;
-  position: absolute;
-  right: 0;
-  top: 0;
+  border-left: 0;
+  border-radius: 0 var(--jelly-border-radius-sm) var(--jelly-border-radius-sm) 0;
 }
 form.search-form button:hover {
-  border-color: transparent;
-  background-color: transparent;
+  border-color: var(--jelly-color-border);
+  background-color: #fff;
   color: var(--jelly-color-title);
 }
 form.search-form input {
   width: 100%;
   font-size: 14px;
-  border-radius: var(--jelly-border-radius-sm);
+  border-radius: var(--jelly-border-radius-sm) 0 0 var(--jelly-border-radius-sm);
   background-color: #fff;
   border-color: var(--jelly-color-border);
   height: 40px;
   padding: 8px 16px;
+  border-right: 0;
+}
+form.search-form input:focus + button {
+  border-color: var(--jelly-color-primary);
 }
 
 /**************************************************/
@@ -555,8 +602,9 @@ form.search-form input {
 nav.breadcrumb {
   border-top: 1px solid var(--jelly-color-border);
   border-bottom: 1px solid var(--jelly-color-border);
-  padding: 12px 0;
+  padding: 12px var(--jelly-side-width);
   font-size: 14px;
+  margin: 0 calc(-1 * var(--jelly-side-width));
 }
 nav.breadcrumb p {
   margin: 0 auto !important;
@@ -729,7 +777,6 @@ nav.breadcrumb .separator {
 /**************************************************/
 .related-posts {
   width: 100%;
-  background-color: var(--jelly-color-item-bg);
   text-align: center;
   margin: 32px 0 0 0;
   padding: 32px 0;
@@ -795,7 +842,7 @@ nav.breadcrumb .separator {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 .page-banner nav.breadcrumb {
   border: 0;
