--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -27,6 +27,9 @@
         //     margin-top: 0;
         //     margin-bottom: 24px;
         // }
+        h1{
+            margin-top: 0;
+        }
     }
     .sidebar {
         width: 240px;
@@ -75,6 +78,7 @@
     padding: 8px var(--jelly-side-width, 16px);
     width: 100%;
     box-sizing: border-box;
+    box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
     .container {
         min-height: 60px;
         display: flex;
@@ -92,6 +96,9 @@
 @media screen and (max-width: 1240px) {
     .container {
         width: 100%;
+        &.flex{
+            margin: 16px auto;
+        }
     }
     .loop-gird {
         grid-template-columns: repeat(2, 1fr);
@@ -217,8 +224,8 @@
 .site-footer {
     // margin-top: 36px;
     background-color: #0a0d14;
-    color: #cccccc;
-    padding: 0 var(--jelly-side-width, 16px);
+    color: #a3a3a3;
+    padding: 32px var(--jelly-side-width, 16px) 0;
     .site-name {
         font-weight: 600;
         font-size: 2.5em;
@@ -230,16 +237,20 @@
     .footer-logo {
         width: 100%;
         display: flex;
-        justify-content: space-between;
-        padding: 64px 0 24px 0;
-        border-bottom: 1px solid #2d323f;
+        // justify-content: space-between;
+        // padding: 64px 0 24px 0;
+        // border-bottom: 1px solid #2d323f;
         a {
             display: block;
         }
         img {
-            height: 64px;
+            height: 48px;
             width: 100%;
         }
+    }
+    .footer-logo-text{
+        margin-top: 30px;
+        color: #fff;
     }
     .footer-content {
         display: flex;
@@ -252,9 +263,10 @@
             margin: 24px 0;
         }
         .footer-item-title {
-            font-size: 22px;
+            font-size: 18px;
             color: #fff;
             font-weight: 600;
+            text-transform: uppercase;
         }
         ul {
             padding: 0;
@@ -265,6 +277,7 @@
                 a {
                     color: var(--jelly-color-primary);
                     font-weight: 600;
+                    font-size: 14px;
                 }
             }
             a {
@@ -276,13 +289,13 @@
         }
     }
     .copyright {
-        background-color: #141414;
-        border-radius: 6px;
+        // background-color: #141414;
+        // border-radius: 6px;
         .copyright-text{
             color: #fff;
             font-size: 14px;
             margin: 0;
-            padding: 16px;
+            padding: 16px 0;
         }
     }
 }
@@ -299,6 +312,7 @@
 }
 #main{
     padding: 0 var(--jelly-side-width, 16px);
+    min-height: 480px;
 }
 
 /* 404 页面 */
@@ -309,11 +323,18 @@
     text-align: center;
     box-sizing: border-box;
     padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
     .error-title {
         font-size: 10rem;
+        margin: 0;
+        line-height: 1;
     }
     .error-description {
-        margin-bottom: 1rem;
+        margin: 0;        
     }
 }
 
@@ -350,6 +371,11 @@
             margin: 24px 0;
         }
     }
+}
+
+.archive-page >.container{
+    margin-top: 64px;
+    margin-bottom: 64px;
 }
 
 /* 移动端 */
@@ -393,7 +419,7 @@ a.button .ri-icon {
         line-height: 1;
     }
     .custom-logo {
-        height: 60px;
+        height: 50px;
         width: 100%;
         object-fit: contain;
     }
@@ -425,7 +451,7 @@ a.button .ri-icon {
         &.current-menu-item > a {
             color: var(--jelly-color-primary);
             &:hover {
-                color: var(--jelly-color-white);
+                color: var(--jelly-color-primary);
             }
         }
 
@@ -454,9 +480,10 @@ a.button .ri-icon {
         color: var(--jelly-color-title);
         background-color: #fff;
         box-sizing: border-box;
+        font-size: 14px;
         &:hover {
-            background-color: var(--jelly-color-primary);
-            color: var(--jelly-color-white);
+            color: var(--jelly-color-primary);
+            // color: var(--jelly-color-white);
         }
         &.button {
             background-color: var(--jelly-color-primary);
@@ -471,13 +498,13 @@ a.button .ri-icon {
         left: 0;
         background-color: #fff;
         white-space: nowrap;
-        box-shadow:
-            0 1px 2px -2px rgba(0, 0, 0, 0.16),
-            0 3px 6px 0 rgba(0, 0, 0, 0.12),
-            0 5px 12px 4px rgba(0, 0, 0, 0.09);
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
         a {
             font-weight: 400;
+            &:hover {
+                background-color: var(--jelly-color-item-bg);
+            }
         }
 
         .sub-menu {
@@ -495,18 +522,38 @@ a.button .ri-icon {
         padding: 6px;
         display: none;
     }
-    /* 搜索按钮 */
-    .open-search {
-        background: none;
-        border: 0;
-        color: var(--jelly-color-title);
-        padding: 6px;
-    }
 
     .menu-actions {
         display: flex;
         gap: 12px;
         align-items: center;
+        .search-input {
+            width: 0;
+            padding: 0;
+            border-width: 0;
+            transition: width 0.3s ease-in-out;
+            float: right;
+            &.active {
+                width: 100%;
+                padding: 8px 16px;
+                border-width: 1px;
+                + button {
+                    border-width: 1px;
+                }
+            }
+        }
+        button {
+            border-width: 0;
+            transition: none;
+        }
+        button:focus {
+            color: inherit;
+            background: #fff;
+            border-color: var(--jelly-color-border);
+        }
+        .search-form {
+            min-width: 40px;
+        }
     }
 }
 
@@ -520,30 +567,39 @@ a.button .ri-icon {
 /**************************************************/
 form.search-form {
     position: relative;
+    display: flex;
+    flex-direction: row;
     button {
         line-height: 1;
-        background-color: transparent;
-        border: 0;
+        background-color: #fff;
+        border: 1px solid var(--jelly-color-border);
         color: var(--jelly-color-description);
         padding: 10px 14px 10px 14px;
         height: 40px;
+        // margin: 1px 1px 1px 0;
+        border-left: 0;
+        border-radius: 0 var(--jelly-border-radius-sm) var(--jelly-border-radius-sm) 0;
         &:hover {
-            border-color: transparent;
-            background-color: transparent;
+            border-color: var(--jelly-color-border);
+            background-color: #fff;
             color: var(--jelly-color-title);
         }
-        position: absolute;
-        right: 0;
-        top: 0;
+        // position: absolute;
+        // right: 0;
+        // top: 0;
     }
     input {
         width: 100%;
         font-size: 14px;
-        border-radius: var(--jelly-border-radius-sm);
+        border-radius: var(--jelly-border-radius-sm) 0 0 var(--jelly-border-radius-sm);
         background-color: #fff;
         border-color: var(--jelly-color-border);
         height: 40px;
         padding: 8px 16px;
+        border-right: 0;
+        &:focus + button {
+            border-color: var(--jelly-color-primary);
+        }
     }
 }
 
@@ -603,8 +659,9 @@ form.search-form {
 nav.breadcrumb {
     border-top: 1px solid var(--jelly-color-border);
     border-bottom: 1px solid var(--jelly-color-border);
-    padding: 12px 0;
+    padding: 12px var(--jelly-side-width);
     font-size: 14px;
+    margin: 0 calc(-1 * var(--jelly-side-width));
     p {
         margin: 0 auto !important;
         color: var(--jelly-color-description);
@@ -782,7 +839,7 @@ nav.breadcrumb {
 /**************************************************/
 .related-posts {
     width: 100%;
-    background-color: var(--jelly-color-item-bg);
+    // background-color: var(--jelly-color-item-bg);
     text-align: center;
     margin: 32px 0 0 0;
     padding: 32px 0;
@@ -846,7 +903,7 @@ nav.breadcrumb {
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.2);
+        background-color: rgba(0, 0, 0, 0.4);
     }
     nav.breadcrumb {
         border: 0;
@@ -1489,10 +1546,12 @@ nav.rank-math-breadcrumb p {
         margin-bottom: 0;
     }
 }
+
 .sidebar .wp-block-rank-math-toc-block {
     position: sticky;
     top: 100px;
 }
+
 .wp-block-rank-math-toc-block {
     max-height: calc(100% - 200px);
     overflow-y: auto;
