--- a/assets/dev/footer.scss
+++ b/assets/dev/footer.scss
@@ -1,8 +1,8 @@
 .site-footer {
     // margin-top: 36px;
     background-color: #0a0d14;
-    color: #cccccc;
-    padding: 0 var(--jelly-side-width, 16px);
+    color: #a3a3a3;
+    padding: 32px var(--jelly-side-width, 16px) 0;
     .site-name {
         font-weight: 600;
         font-size: 2.5em;
@@ -14,16 +14,20 @@
     .footer-logo {
         width: 100%;
         display: flex;
-        justify-content: space-between;
-        padding: 64px 0 24px 0;
-        border-bottom: 1px solid #2d323f;
+        // justify-content: space-between;
+        // padding: 64px 0 24px 0;
+        // border-bottom: 1px solid #2d323f;
         a {
             display: block;
         }
         img {
-            height: 64px;
+            height: 48px;
             width: 100%;
         }
+    }
+    .footer-logo-text{
+        margin-top: 30px;
+        color: #fff;
     }
     .footer-content {
         display: flex;
@@ -36,9 +40,10 @@
             margin: 24px 0;
         }
         .footer-item-title {
-            font-size: 22px;
+            font-size: 18px;
             color: #fff;
             font-weight: 600;
+            text-transform: uppercase;
         }
         ul {
             padding: 0;
@@ -49,6 +54,7 @@
                 a {
                     color: var(--jelly-color-primary);
                     font-weight: 600;
+                    font-size: 14px;
                 }
             }
             a {
@@ -60,13 +66,13 @@
         }
     }
     .copyright {
-        background-color: #141414;
-        border-radius: 6px;
+        // background-color: #141414;
+        // border-radius: 6px;
         .copyright-text{
             color: #fff;
             font-size: 14px;
             margin: 0;
-            padding: 16px;
+            padding: 16px 0;
         }
     }
 }
