--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
   Author URI: https://jellydai.com/
 
-  Description: 作为一款深度集成 Elementor 页面构建器 的主题，“Jelly Frame”充分发挥了拖放式编辑的强大优势，让您可以轻松自定义每一个细节，而无需编写任何代码。无论是调整布局、更改颜色，还是添加复杂的动画效果，只需点击几下即可完成。真正实现“所见即所得”，让您的创意瞬间变为现实。
+  Description: As a theme deeply integrated with the Elementor page builder, "Jelly Frame" takes full advantage of the powerful drag-and-drop editing, allowing you to easily customize every detail without writing any code.
 
   Version: 1.2.6
 
