--- a/assets/dev/layout.css
+++ b/assets/dev/layout.css
@@ -80,6 +80,10 @@
   width: 100%;
   box-sizing: border-box;
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background: #fff;
 }
 .site-header .container {
   min-height: 60px;
