--- a/assets/dev/layout.scss
+++ b/assets/dev/layout.scss
@@ -84,6 +84,10 @@
     width: 100%;
     box-sizing: border-box;
     box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background: #fff; // 保证内容下滑时不透明
     .container {
         min-height: 60px;
         display: flex;
