--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -36,16 +36,21 @@
 .container .sidebar h4 {
   font-size: 20px !important;
   text-transform: capitalize;
+  padding: 6px 12px 6px 16px;
   box-sizing: border-box;
+  position: relative;
+  background: #fafafa;
 }
-.container .sidebar h2::after,
-.container .sidebar h3::after,
-.container .sidebar h4::after {
+.container .sidebar h2::before,
+.container .sidebar h3::before,
+.container .sidebar h4::before {
   content: "";
   display: block;
-  height: 3px;
-  width: 30%;
-  margin-top: 12px;
+  position: absolute;
+  height: 100%;
+  width: 4px;
+  top: 0;
+  left: 0;
   background-color: var(--jelly-color-primary);
 }
 
@@ -75,6 +80,10 @@
   width: 100%;
   box-sizing: border-box;
   box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background: #fff;
 }
 .site-header .container {
   min-height: 60px;
@@ -87,6 +96,73 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.site-footer {
+  background-color: #0a0d14;
+  color: #a3a3a3;
+  padding: 32px var(--jelly-side-width, 16px) 0;
+}
+.site-footer .site-name {
+  font-weight: 600;
+  font-size: 2.5em;
+  color: inherit;
+}
+.site-footer .site-name:hover {
+  text-decoration: none;
+}
+.site-footer .footer-logo {
+  width: 100%;
+  display: flex;
+}
+.site-footer .footer-logo a {
+  display: block;
+  color: #fff;
+}
+.site-footer .footer-logo img {
+  height: 48px;
+  width: 100%;
+}
+.site-footer .footer-logo-text {
+  margin-top: 30px;
+  color: #a3a3a3;
+}
+.site-footer .footer-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 48px;
+}
+.site-footer .footer-content .footer-item {
+  width: 100%;
+  margin: 24px 0;
+}
+.site-footer .footer-content .footer-item-title {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.site-footer .footer-content ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.site-footer .footer-content ul .current-menu-item a {
+  color: var(--jelly-color-primary);
+  font-weight: 600;
+  font-size: 14px;
+}
+.site-footer .footer-content ul a {
+  color: inherit;
+}
+.site-footer .footer-content ul a:hover {
+  color: var(--jelly-color-primary);
+}
+.site-footer .copyright .copyright-text {
+  color: #a3a3a3;
+  font-size: 14px;
+  margin: 0;
+  padding: 16px 0;
 }
 
 @media screen and (max-width: 1240px) {
@@ -117,6 +193,13 @@
   .loop-gird {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
+  }
+  .site-footer .footer-content {
+    flex-direction: column;
+    gap: 0;
+  }
+  .site-footer .footer-content .footer-item {
+    margin: 8px 0;
   }
 }
 .alignleft {
@@ -211,81 +294,6 @@
   color: var(--jelly-color-description);
 }
 
-.site-footer {
-  background-color: #0a0d14;
-  color: #a3a3a3;
-  padding: 32px var(--jelly-side-width, 16px) 0;
-}
-.site-footer .site-name {
-  font-weight: 600;
-  font-size: 2.5em;
-  color: inherit;
-}
-.site-footer .site-name:hover {
-  text-decoration: none;
-}
-.site-footer .footer-logo {
-  width: 100%;
-  display: flex;
-}
-.site-footer .footer-logo a {
-  display: block;
-}
-.site-footer .footer-logo img {
-  height: 48px;
-  width: 100%;
-}
-.site-footer .footer-logo-text {
-  margin-top: 30px;
-  color: #fff;
-}
-.site-footer .footer-content {
-  display: flex;
-  justify-content: space-between;
-  gap: 48px;
-}
-.site-footer .footer-content .footer-item {
-  width: 100%;
-  margin: 24px 0;
-}
-.site-footer .footer-content .footer-item-title {
-  font-size: 18px;
-  color: #fff;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-.site-footer .footer-content ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-.site-footer .footer-content ul .current-menu-item a {
-  color: var(--jelly-color-primary);
-  font-weight: 600;
-  font-size: 14px;
-}
-.site-footer .footer-content ul a {
-  color: inherit;
-}
-.site-footer .footer-content ul a:hover {
-  color: var(--jelly-color-primary);
-}
-.site-footer .copyright .copyright-text {
-  color: #fff;
-  font-size: 14px;
-  margin: 0;
-  padding: 16px 0;
-}
-
-@media screen and (max-width: 767px) {
-  .site-footer .footer-content {
-    flex-direction: column;
-    gap: 0;
-  }
-  .site-footer .footer-content .footer-item {
-    margin: 8px 0;
-  }
-}
 #main {
   padding: 0 var(--jelly-side-width, 16px);
   min-height: 480px;
@@ -345,6 +353,65 @@
   margin-bottom: 64px;
 }
 
+.contact-us-page {
+  background-color: #f8f8f8;
+  align-items: center;
+}
+.contact-us-page .container.primary {
+  margin: 0 auto;
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+.contact-us-page .contact-info, .contact-us-page .contact-form {
+  width: 100%;
+}
+.contact-us-page .contact-form {
+  box-sizing: border-box;
+  padding: 24px;
+  border-radius: 6px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.contact-us-page .contact-form h3 {
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+.contact-us-page .contact-form input, .contact-us-page .contact-form textarea {
+  padding: 1rem;
+  border-radius: 0;
+}
+.contact-us-page .contact-item-tile {
+  display: block;
+  font-weight: 600;
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+.contact-us-page .contact-link {
+  display: block;
+  margin-bottom: 8px;
+}
+.contact-us-page a.contact-link {
+  text-decoration: underline;
+}
+.contact-us-page .contact-list .contact-item {
+  margin-top: 12px;
+  background-color: #fff;
+  padding: 16px;
+}
+.contact-us-page .ri-icon {
+  font-size: 64px;
+  padding: 12px;
+  border-radius: 50%;
+  background-color: #f8f8f8;
+  margin-right: 16px;
+  color: var(--jelly-color-primary);
+  line-height: 1;
+}
+
 /* 移动端 */
 @media screen and (max-width: 767px) {
   .error-page {
@@ -366,6 +433,12 @@
 a.button .ri-icon {
   font-weight: 400;
   margin-right: 6px;
+}
+
+.subtitle {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--jelly-color-primary);
 }
 
 /**************************************************/
@@ -1159,6 +1232,18 @@ nav.breadcrumb .separator {
   color: var(--jelly-color-primary);
 }
 
+.social-media-list {
+  display: flex;
+  gap: 12px;
+}
+.social-media-list .social-icon {
+  font-size: 22px;
+  color: #a3a3a3;
+}
+.social-media-list .social-icon:hover {
+  color: var(--jelly-color-primary);
+}
+
 /**************************************************/
 /* 平板端适配 */
 /**************************************************/
@@ -1409,6 +1494,23 @@ nav.breadcrumb .separator {
 .gtranslate_wrapper .gt_float_switcher .gt_options a:hover {
   color: var(--jelly-color-title);
   background-color: var(--jelly-color-item-bg);
+}
+
+.trp-language-switcher {
+  width: 150px;
+}
+.trp-language-switcher > div {
+  padding: 0;
+  width: 100% !important;
+  background-position: calc(100% - 10px) calc(1em - 2px), calc(100% - 3px) calc(1em + 0px);
+}
+.trp-language-switcher > div > a {
+  background: transparent;
+}
+
+.trp-language-switcher:focus .trp-ls-shortcode-language,
+.trp-language-switcher:hover .trp-ls-shortcode-language {
+  padding: 0;
 }
 
 html[dir=rtl] .gtranslate_wrapper .gt_float_switcher .gt_options {
